using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

internal class AnimationStrings
{   // Esse arquivo serve para referenciar os nomes de variaveis dentro do animator
    // sem que tenha um erro por digitar errado. 
    internal static string isMoving = "isMoving";
    internal static string isRunning = "isRunning";
    internal static string yVelocity = "yVelocity";
    internal static string jumpTrigger = "jump";
    internal static string attackTrigger = "attack";
    internal static string canMove= "canMove";
    internal static string isAlive = "isAlive";
    internal static string isHit = "isHit";
    internal static string hitTrigger = "hit";
    internal static string lockVelocity = "lockVelocity";
    internal static string AttackCooldown = "attackCD";
}